--- a/css/about-us.css
+++ b/css/about-us.css
@@ -1,1 +1,16 @@
-@import url("base.css"); 
+.all {
+    padding: 0 360px;
+}
+
+h1 {
+    color: #17929D;
+}
+
+p {
+    font-family: sans-serif;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+}
