--- a/css/base.css
+++ b/css/base.css
@@ -37,7 +37,6 @@ nav {
 
   #logo {
     font-size: 35px;
-    /* text-align: center; */
     position: absolute;
     left: 13px;
 
@@ -51,7 +50,6 @@ nav {
 #nav-medium {
   display: flex;
   column-gap: 40px;
-  /* margin: 0 auto; */
   height: 100%;
   align-items: center;
 }
@@ -64,7 +62,6 @@ nav {
   align-items: center;
   column-gap: 40px;
   font-size: 25px;
-  /* height: 100%; */
 
   li {
     flex-shrink: 0;
@@ -91,14 +88,12 @@ nav {
   /*менб в колонну*/
   display: flex;
   flex-direction: column;
-  /* transition: display 22.3s; */
 }
 
 #catalog-content {
   display: none;
   position: absolute;
   width: 100%;
-  /* z-index: 1; */
   font-size: 18px;
   text-align: center;
   padding: 5px;
@@ -109,8 +104,6 @@ nav form {
   /*поиск*/
   display: flex;
 
-  /* place-items: center; */
-  /*input по центру*/
   input {
     background-color: #D5F1F3;
     border-radius: 6px;
@@ -122,12 +115,10 @@ nav form {
 
   input:hover,
   input:focus {
-    /*поиск наведение*/
     background-color: #F3FEFF;
   }
 
   input:focus {
-    /*поиск зажатие*/
     outline: 2px solid #DE3D82;
     transition: outline-color 0.3s;
   }
@@ -141,7 +132,7 @@ nav form {
 }
 
 .burger-checkbox {
-  /*чтоб чекбокс пряталась*/
+  /*чтоб чекбокс прятать*/
   position: absolute;
   top: 0;
   right: 0;
@@ -149,23 +140,17 @@ nav form {
 }
 
 .burger {
-  /*блок полосок*/
   position: absolute;
-  /*чтоб был над менюшкой при открытии?*/
   z-index: 100;
-  /*отвечает за перекрывание иерархию */
   top: 15px;
   right: 10px;
   cursor: pointer;
-  /*меняет курсор*/
   display: block;
-  /*как блок с новой строки*/
   width: 30px;
   height: 23px;
 }
 
 .burger::before,
-/*полоски*/
 .burger::after {
   content: '';
   position: absolute;
@@ -229,7 +214,6 @@ nav form {
   display: block;
   color: #D5F1F3;
   padding: 8px;
-  /* color: #D5F1F3; */
   font-size: 18px;
   text-align: center;
   text-decoration: none;
@@ -243,7 +227,6 @@ nav form {
   right: 140px;
   width: 100px;
   border-radius: 10px;
-  /* border: 1px solid #17929D; */
 
   a {
     text-decoration: none;
@@ -266,7 +249,6 @@ nav,
 #burger-catalog #burger-catalog-menu,
 .menu-list,
 #catalog-content {
-  /*зеленый фон*/
   background-color: #15383D;
 }
 
@@ -303,6 +285,7 @@ footer {
     font-size: 25px
   }
 }
+
 
 @media (max-width: 1024px) {
 
@@ -485,7 +468,7 @@ footer {
   }
 
   nav {
-    height: 40px;
+    height: 33px;
 
     #logo {
       font-size: 20px;
@@ -514,7 +497,7 @@ footer {
     input {
       padding: 2px 0px 0px 4px;
       height: 18px;
-      width: 99px;
+      width: 90px;
     }
 
     input::placeholder {
@@ -550,7 +533,7 @@ footer {
   }
 
   footer {
-    height: 10px;
+    height: 15px;
   }
 
   #footer-items {
